# FindlyAPI

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  test.py
Writerside/: r.tree
Writerside/topics/: Empty-MD-Topic.md  starter-topic.md
get_products_data/: output_of_results.py
get_products_data/collecting_primary_data/: get_kufar_data.py  get_mmg_data.py  get_onliner_data.py
middleware/: reject_middleware.py  request_args_middleware.py
secret_data/: config.toml
services/: output_of_results.py
services/collecting_primary_data/: get_21vek_data.py  get_kufar_data.py  get_mmg_data.py  get_onliner_data.py  product_models.py
services/filtering_algorithms/: filter_by_exclusion_word.py  filter_for_category_based_on_price.py  filter_regular_expression.py
src/: app.py  error_handlers.py  main.py  models.py
src/findlyapi/: main.py
src/findlyapi/routing/: exception_handlers.py
src/findlyapi/schemas/: search_filters.py  search_payload.py
src/findlyapi/setup/: app_factory.py
src/findlyapi/utils/: key_from_instance_hash.py
src/middleware/: request_args_middleware.py
src/routing/: api.py  exception_handlers.py
src/routing/routers/: api.py
src/schemas/: search_filters.py  search_payload.py
src/secret_data/: config.toml
src/services/: output_of_results.py
src/services/collecting_primary_data/: get_21vek_data.py  get_kufar_data.py  get_mmg_data.py  get_onliner_data.py  product_models.py
src/services/filter/: entity.py
src/utils/: get_config.py
templates/: method_not_allowed_page.html  notfound_page.html  unauthorized_page.html  unprocessable_content_page.html
utils/get_config/: get_pars_config.py
(+28 files in other folders)
