[project]
name = "findlyapi"
version = "0.9.5"
description = "analyzer of goods on marketplaces for a key request and displays the most relevant results"
authors = [
    { name = "kolo", email = "kolo.is.main@gmail.com" },
    { name = "inlinera" },
]
requires-python = "~=3.11"
readme = "README.md"
license = "MIT"
dependencies = [
    "bs4>=0.0.2,<0.0.3",
    "httpx>=0.27.2,<0.28",
    "aiocache>=0.12.3,<0.13",
    "fastapi[standard]>=0.115.12",
]

[dependency-groups]
dev = [
    "fastapi[standard]>=0.115.12",
    "ruff>=0.6.9,<0.7",
    "uvicorn>=0.34.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [
    ".idea",
    "venv",
    ".git",
    "poetry.lock",
    ".__pycache__"
    ]

[tool.hatch.build.targets.wheel]
include = [
    "app.py",
    "README.md"
]
