[project]
name = "findlyapi"
version = "1.0.0a0"
description = "analyzer of goods on marketplaces for a key request and displays the most relevant results"
authors = [
    { name = "kolo", email = "kolo.is.main@gmail.com" },
    { name = "inlinera" },
]
requires-python = "~=3.11"
readme = "README.md"
license = "MIT"
dependencies = [
    "httpx>=0.27.2,<0.28",
    "aiocache>=0.12.3,<0.13",
    "fastapi[standard]>=0.115.12",
    "dishka>=1.6.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6.9,<0.7",
    "uvicorn>=0.34.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
exclude = [
    ".idea",
    "venv",
    ".git",
    "poetry.lock",
    ".__pycache__"
    ]
